# agent-battle

./: .gitignore  README.md
backend/: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md
backend/src/: app.rs  config.rs  event_bus.rs  lib.rs  main.rs  tracing.rs
backend/src/domain/: action.rs  agent.rs  error.rs  event.rs  ids.rs  map.rs  match.rs  match_.rs  mod.rs  player.rs  room.rs  slot.rs  team.rs
backend/src/http/: health.rs  mod.rs
backend/src/persistence/: memory.rs  mod.rs  traits.rs
backend/src/services/: admin_service.rs  match_service.rs  mod.rs  room.rs  room_service.rs
backend/src/simulation/: combat.rs  decisions.rs  engine.rs  mod.rs  movement.rs  rules.rs  scoring.rs  skills.rs  visibility.rs
backend/src/websocket/: admin_socket.rs  gateway.rs  mod.rs  protocol.rs  room_socket.rs  subscriptions.rs
